model/unpackaged/objects/SIP_Server_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Audit__c</fullName>
        <label>Audit</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>DEBUG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FATAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WARN</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SIP Server Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Effective_Date__c</columns>
        <columns>Level__c</columns>
        <columns>Audit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SIP{00000000}</displayFormat>
        <label>SIP Server Audit</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SIP Server Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>